--- a/tensorflow/examples/adding_an_op/BUILD
+++ b/tensorflow/examples/adding_an_op/BUILD
@@ -119,7 +119,10 @@ py_test(
     size = "small",
     srcs = ["cuda_op_test.py"],
     srcs_version = "PY2AND3",
-    tags = tf_cuda_tests_tags() + ["notap", "no_oss"],
+    tags = tf_cuda_tests_tags() + [
+        "notap",
+        "no_oss",
+    ],
     deps = [
         ":cuda_op",
         "//tensorflow:tensorflow_py",
